Added links for bets, rankings, start sits

--- a/fantasy.html
+++ b/fantasy.html
@@ -8,10 +8,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+
+<div class ="TopLinks">
+    <div class = "Rankings"><a href="rankings.html">Rankings</a></div>
+    <div class = "StartSits"><a href="Start-Sits.html">Start/Sits</a></div>
+    <div class = "BestBets"><a href="Best-Bets">Best Bets</a></div>
+ </div>
+
+
 <h1>Fantasy Football Week 18 Rankings, Start/Sits, Best Bets</h1>
+<p class ="DerrickDescription">Derrick Henry Stiff Arming AJ Bouye En Route to a 50 yard TD run</p>
 
 <img class="Derrick" src="https://static.clubs.nfl.com/image/private/t_editorial_landscape_12_desktop/titans/qiry3lcb7q4fei1soefx" alt="Derek Henry"> 
+
 </body>
 </html>
 
