Center alligned Derrick henry image by wrapping in flex div

--- a/fantasy.html
+++ b/fantasy.html
@@ -19,7 +19,11 @@
 <h1>Fantasy Football Week 18 Rankings, Start/Sits, Best Bets</h1>
 <p class ="DerrickDescription">Derrick Henry Stiff Arming AJ Bouye En Route to a 50 yard TD run</p>
 
-<img class="Derrick" src="https://static.clubs.nfl.com/image/private/t_editorial_landscape_12_desktop/titans/qiry3lcb7q4fei1soefx" alt="Derek Henry"> 
+<div class="DerrickContainer">
+<img class="Derrick" src="https://static.clubs.nfl.com/image/private/t_editorial_landscape_12_desktop/titans/qiry3lcb7q4fei1soefx" alt="Derek Henry">
+</div>
+
+<p> We made it! Well some of you did, and hopefully if you did not it was because your league doesn't do a week 18 championship (I don't know why anyone does this). But, if your ARE one of the unlucky managers who find yourself looking for fantasy advice on week 18, or maybe just a gambling enthusiast, I have all the advice you need right here. So let's get right into the rankings. </p> 
 
 </body>
 </html>
