--- a/fantasy.html
+++ b/fantasy.html
@@ -12,7 +12,7 @@
 <div class ="TopLinks">
     <div class = "Rankings"><a href="rankings.html">Rankings</a></div>
     <div class = "StartSits"><a href="Start-Sits.html">Start/Sits</a></div>
-    <div class = "BestBets"><a href="Best-Bets">Best Bets</a></div>
+    <div class = "BestBets"><a href="Best-Bets.html">Best Bets</a></div>
  </div>
 
 
