Added rankings, start sits, best bets link to every page

--- a/rankings.html
+++ b/rankings.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 class="Rankingsh1">Week 18 rankings</h1>
+<div class ="TopLinks">
+        <div class = "Rankings"><a href="rankings.html">Rankings</a></div>
+        <div class = "StartSits"><a href="Start-Sits.html">Start/Sits</a></div>
+        <div class = "BestBets"><a href="Best-Bets.html">Best Bets</a></div>
+</div>
+<h1 class="Rankingsh1">Week 18 rankings</h1>
     
 </body>
 </html>
