Attempted to center allign all text

--- a/Start-Sits.html
+++ b/Start-Sits.html
@@ -13,6 +13,7 @@
         <div class = "StartSits"><a href="Start-Sits.html">Start/Sits</a></div>
         <div class = "BestBets"><a href="Best-Bets.html">Best Bets</a></div>
 </div>
+<h1 class="Linkh1">Start/Sits</h1>
 
 </body>
 </html>
