--- a/rankings.html
+++ b/rankings.html
@@ -13,7 +13,7 @@
         <div class = "StartSits"><a href="Start-Sits.html">Start/Sits</a></div>
         <div class = "BestBets"><a href="Best-Bets.html">Best Bets</a></div>
 </div>
-<h1 class="Rankingsh1">Week 18 rankings</h1>
+<h1 class="Linkh1">Week 18 rankings</h1>
     
 </body>
 </html>
