Added home link to top

--- a/fantasy.html
+++ b/fantasy.html
@@ -10,6 +10,7 @@
 <body>
 
 <div class ="TopLinks">
+    <div class = "fantasy"><a href="fantasy.html">Home</a></div>
     <div class = "Rankings"><a href="rankings.html">Rankings</a></div>
     <div class = "StartSits"><a href="Start-Sits.html">Start/Sits</a></div>
     <div class = "BestBets"><a href="Best-Bets.html">Best Bets</a></div>
